--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,9 @@
 
 buildscript {
     repositories {
-        jcenter()
+        maven {
+            url "https://jcenter.bintray.com"
+        }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:1.0.0'
@@ -14,6 +16,8 @@ buildscript {
 
 allprojects {
     repositories {
-        jcenter()
+        maven {
+            url "https://jcenter.bintray.com"
+        }
     }
 }
